--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -1,23 +1,55 @@
+/* FONT WE ARE USING! */
+/* font-family: 'PT Serif', serif;
+font-family: 'Work Sans', sans-serif; */
+
 .App {
   text-align: center;
+  font-family: "PT Serif", serif;
+  font-size: 18px;
+}
+.text-small {
+  font-family: "Work Sans", sans-serif;
+  font-size: 14px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+/* COFFEE MENU */
 .Menu--section {
-  background-color: aqua;
-  display: flex;
-  flex-direction: row;
+  padding: 20px;
 }
 
 .coffee--section {
-  background-color: orange;
+  background-color: rgb(253, 205, 183);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .coffee--title {
-  color: hotpink;
+  color: rgb(0, 0, 0);
+}
+
+.coffee--price {
+  color: rgb(3, 3, 3);
+}
+.coffee_title_desc--section {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  max-width: 60%;
+}
+.btn {
+  height: 50%;
+  align-self: center;
+  border-radius: 50%;
+  background-color: rgb(24, 11, 11);
+  border: none;
+  padding: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -48,10 +80,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.btn {
-  background-color: rgb(41, 44, 44);
-  border-radius: 4px;
-  padding: 5px;
 }
