--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -42,7 +42,7 @@ font-family: 'Work Sans', sans-serif; */
   top: 0;
   right: 5%;
   margin-top: 20px;
-  z-index: 2;
+  z-index: 4;
 }
 .cart img {
   position: absolute;
@@ -79,7 +79,10 @@ font-family: 'Work Sans', sans-serif; */
 
 .cart--section {
   background-color: rgba(255, 255, 255, 0.921);
-  height: 100%;
+  height: 70%;
+  position: absolute;
+  width: 100vw;
+  top: 80px;
 }
 
 .cartOpen {
