--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -75,6 +75,7 @@ font-family: 'Work Sans', sans-serif; */
   min-width: 100%;
   background-size: cover;
   z-index: 0;
+  padding-bottom: 100px;
 }
 
 .cart--section {
@@ -185,35 +186,14 @@ font-family: 'Work Sans', sans-serif; */
 }
 
 .coffee--section {
-  justify-content: space-between;
-  display: flex;
-  flex-direction: row;
-  max-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 1fr;
+  grid-template-rows: 1fr;
 }
-
-.coffee--title,
-.coffee--price {
-  color: rgb(0, 0, 0);
-  margin-top: 25px;
-}
-.coffee--title {
-  min-width: 300px;
-  text-align: left;
-  margin-bottom: 0px;
-  margin-top: 10px;
-
-  line-height: 70%;
-  padding-bottom: 0px;
-  padding-top: 20px;
-}
-
-.dots {
-  border-bottom: dotted rgba(0, 0, 0, 0.315) 0.5px;
-  margin: 0px;
-  padding: 0px;
+.coffee_title_desc--section {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
 }
 
 .btn {
@@ -263,4 +243,3 @@ font-family: 'Work Sans', sans-serif; */
     transform: rotate(360deg);
   }
 }
-
