--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -1,7 +1,126 @@
-body {
-  background-color: rgb(247, 201, 208);
-  color: black;
+/* cartList */
+.cartItem--li {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
+
+.sub--button,
+.add--button {
+  border: none;
+}
+
+.value--section {
+  font-size: 1em;
+  margin: 5px 0px 5px 0px;
+}
+
+.item--info {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr;
+  width: 100%;
+  gap: 5px;
+  margin-right: 10px;
+  flex: 1;
+}
+/*  */
+.item--title {
+  margin-bottom: 0px;
+  text-align: left;
+}
+.item--dots {
+  border-bottom: dotted 1px grey;
+  flex: 2;
+}
+.item--price {
+  text-align: left;
+  font-size: 14px;
+}
+
+/* cooffee LI */
+/* samma som li */
+.coffee--section {
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: 3rem auto;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+/* knapp med plus */
+.btn {
+  width: 2rem;
+  height: 2rem;
+  background-color: rgb(6, 6, 6);
+  border: none;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  margin-right: 10px;
+  align-self: flex-end;
+  border-radius: 99rem;
+}
+
+/* samma som row */
+.coffee_title_desc--section {
+  grid-row: 1 / 2;
+  grid-column: 2/3;
+  gap: 0rem;
+  margin: 5px;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+}
+.coffee--price {
+  grid-column: 4/4;
+  grid-row: 1/1;
+  margin: 0px;
+}
+
+.coffee_title_desc--section .dots {
+  flex: 1;
+  border-bottom: 1px dotted rgb(141, 141, 141);
+}
+.coffee--title {
+  margin: 0px;
+  line-height: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+
+.coffee--desc {
+  grid-column: 2/ 3;
+  grid-row: 2/2;
+  padding: 0;
+  margin: 0;
+  padding-left: 5px;
+  font-weight: lighter;
+}
+
+/* COFFEE MENU */
+.menu--section {
+  max-width: 100%;
+  min-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0px;
+  height: 100vh;
+  background-color: #f3e4e1;
+}
+
+.menu--title {
+  margin-top: 20%;
+  text-align: center;
+}
+
+/* Header / NAVBAR  */
 
 .navlist--ul {
   list-style: none;
@@ -27,12 +146,6 @@ body {
   text-decoration: none;
   font-size: 2em;
 }
-
-/* FONT WE ARE USING! */
-/* font-family: 'PT Serif', serif;
-font-family: 'Work Sans', sans-serif; */
-
-/* Header / NAVBAR  */
 .cart {
   width: 50px;
   height: 50px;
@@ -68,26 +181,31 @@ font-family: 'Work Sans', sans-serif; */
 }
 
 .navbar--section {
-  background-image: url("../public/graphics/graphics-header.svg");
-  padding-top: 10px;
-  background-repeat: no-repeat;
-  background-size: auto;
+  max-width: 100%;
   min-width: 100%;
+  min-height: 20%;
+  max-height: 32%;
+  position: absolute;
+  padding-top: 0;
+  background-image: url("./../public/graphics/graphics-header.svg");
+  background-repeat: no-repeat;
   background-size: cover;
-  z-index: 0;
-  padding-bottom: 100px;
+  z-index: 2;
 }
 
 .cart--section {
   background-color: rgba(255, 255, 255, 0.921);
-  height: 70%;
+  height: 85%;
   position: absolute;
-  width: 100vw;
+  width: 90vw;
   top: 80px;
+  left: 5%;
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cartOpen {
-  padding: 20px;
   z-index: 3;
   display: block;
   position: absolute;
@@ -109,6 +227,7 @@ font-family: 'Work Sans', sans-serif; */
   background-color: #282c34;
   height: 100vh;
   min-width: 30px;
+  z-index: 3;
 }
 .closed {
   display: none;
@@ -133,11 +252,11 @@ font-family: 'Work Sans', sans-serif; */
   width: 60%;
   height: 50%;
   margin: 10px;
-  background-image: url("../public/graphics/close.svg");
+  background-image: url("./../public/graphics/close.svg");
   position: absolute;
 }
 .closedBurger {
-  background-image: url("../public/graphics/navicon.svg");
+  background-image: url("./../public/graphics/navicon.svg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 60%;
@@ -159,7 +278,70 @@ font-family: 'Work Sans', sans-serif; */
   width: 50px;
   height: 50px;
   border-radius: 50px;
+  display: inline-table;
 }
+
+.nav-con {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+/* SHOPINGCART  */
+
+.total--info {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: 1fr;
+  width: 100%;
+  gap: 0.5px;
+  margin-right: 10px;
+  flex: 1;
+  max-width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+}
+/*  */
+.item--total {
+  margin-bottom: 0px;
+  text-align: left;
+  flex: 1;
+  font-size: 2em;
+}
+.item--dots {
+  border-bottom: dotted 3px grey;
+  flex: 1;
+}
+.item--sum {
+  align-self: flex-end;
+  margin-bottom: 0px;
+}
+
+.item--ink {
+  text-align: left;
+  padding-left: 20px;
+  font-size: 16px;
+}
+
+/* button */
+.takemyMoney {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-radius: 30px;
+  padding: 20px 45px;
+  font-size: 1.5em;
+  bottom: 30px;
+  border: none;
+}
+
+body {
+  background-color: rgb(247, 201, 208);
+  color: black;
+}
+
+/* FONT WE ARE USING! */
+/* font-family: 'PT Serif', serif;
+font-family: 'Work Sans', sans-serif; */
 
 .App {
   text-align: center;
@@ -171,11 +353,6 @@ font-family: 'Work Sans', sans-serif; */
   font-size: 14px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 /* COFFEE MENU */
 .Menu--section {
   max-width: 100%;
@@ -184,26 +361,7 @@ font-family: 'Work Sans', sans-serif; */
   margin-right: auto;
 }
 
-.coffee--section {
-  display: grid;
-  grid-template-columns: 0.5fr 2fr 1fr;
-  grid-template-rows: 1fr;
-}
-.coffee_title_desc--section {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-}
-
-.btn {
-  max-height: 50%;
-  max-width: 50px;
-  align-self: center;
-  border-radius: 50%;
-  background-color: rgb(24, 11, 11);
-  border: none;
-  padding: 10px;
-}
+/* används detta */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
