inserting footer css to app.css file

--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -1,3 +1,18 @@
+/* footer */
+
+.footer--section {
+  max-width: 100%;
+  min-width: 100%;
+  min-height: 10%;
+  max-height: 10%;
+  position: absolute;
+  bottom: 0;
+  background-image: url("../public/graphics/graphics-footer.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 0;
+}
+
 /* cartList */
 .cartItem--li {
   list-style: none;
