--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -1,15 +1,14 @@
 /* footer */
 
 .footer--section {
-  max-width: 100%;
-  min-width: 100%;
+  width: 100%;
   min-height: 10%;
   max-height: 10%;
   position: absolute;
   bottom: 0;
   background-image: url("../public/graphics/graphics-footer.svg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   z-index: 0;
 }
 
@@ -199,15 +198,13 @@
 }
 
 .navbar--section {
-  max-width: 100%;
-  min-width: 100%;
-  min-height: 20%;
-  max-height: 32%;
+  width: 100%;
+  height: 20%;
   position: absolute;
   padding-top: 0;
   background-image: url("./../public/graphics/graphics-header.svg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   z-index: 2;
 }
 
