--- a/airbean/src/App.css
+++ b/airbean/src/App.css
@@ -1,433 +1,28 @@
-/* footer */
-
-.footer--section {
-  width: 100%;
-  min-height: 10%;
-  max-height: 10%;
-  position: absolute;
-  bottom: 0;
-  background-image: url("../public/graphics/graphics-footer.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
+body{
+  background-color: darkgray;
+}
+.App {
+  position: relative;
+  display: flex;
+  margin: auto;
+  margin-top: 8px;
+  width: 375px;
+  height: 667px;
+  text-align: center;
+  background-color: #ffffff;
+  flex-direction: column;
+  overflow: auto;
+  overflow-x: hidden;
+  font-family: sans-serif;
   z-index: 0;
 }
-
-/* cartList */
-.cartItem--li {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
 
-.sub--button,
-.add--button {
-  border: none;
-}
 
-.value--section {
-  font-size: 1em;
-  margin: 5px 0px 5px 0px;
-}
 
-.item--info {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: 1fr;
-  width: 100%;
-  gap: 5px;
-  margin-right: 10px;
-  flex: 1;
-}
-/*  */
-.item--title {
-  margin-bottom: 0px;
-  text-align: left;
-}
-.item--dots {
-  border-bottom: dotted 1px grey;
-  flex: 2;
-}
-.item--price {
-  text-align: left;
-  font-size: 14px;
-}
 
-/* cooffee LI */
-/* samma som li */
-.coffee--section {
-  display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: 3rem auto;
-  max-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-}
-/* knapp med plus */
-.btn {
-  width: 2rem;
-  height: 2rem;
-  background-color: rgb(6, 6, 6);
-  border: none;
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
-  margin-right: 10px;
-  align-self: flex-end;
-  border-radius: 99rem;
-}
 
-/* samma som row */
-.coffee_title_desc--section {
-  grid-row: 1 / 2;
-  grid-column: 2/3;
-  gap: 0rem;
-  margin: 5px;
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-}
-.coffee--price {
-  grid-column: 4/4;
-  grid-row: 1/1;
-  margin: 0px;
-}
 
-.coffee_title_desc--section .dots {
-  flex: 1;
-  border-bottom: 1px dotted rgb(141, 141, 141);
-}
-.coffee--title {
-  margin: 0px;
-  line-height: 100%;
-  display: flex;
-  align-items: flex-end;
-  font-size: 1.3em;
-  text-align: left;
-}
-
-.coffee--desc {
-  grid-column: 2/ 3;
-  grid-row: 2/2;
-  padding: 0;
-  margin: 0;
-  padding-left: 5px;
-  font-weight: lighter;
-  text-align: left;
-}
-
-/* COFFEE MENU */
-.menu--section {
-  max-width: 100%;
-  min-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0px;
-  height: 100vh;
-  background-color: #f3e4e1;
-}
-
-.menu--title {
-  margin-top: 20%;
-  text-align: center;
-}
-
-/* Header / NAVBAR  */
-
-.navlist--ul {
-  list-style: none;
-  margin-top: 50%;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.navlist--ul li {
-  padding-top: 15px;
-}
-
-.line {
-  max-width: 40px;
-  border-bottom: 1px solid grey;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-}
-
-.navlist--ul a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  font-size: 2em;
-}
-.cart {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: #000000;
-  position: absolute;
-  top: 0;
-  right: 5%;
-  margin-top: 20px;
-  z-index: 4;
-}
-.cart img {
-  position: absolute;
-  top: 30%;
-  left: 30%;
-}
-
-.cartAmount--section {
-  position: absolute;
-  top: -30%;
-  left: 60%;
-  background-color: red;
-  height: 30px;
-  width: 30px;
-  text-align: center;
-  border-radius: 50%;
-  color: white;
-}
-
-.cartAmount--section p {
-  margin: 3px;
-  font-weight: bold;
-}
-
-.navbar--section {
-  width: 100%;
-  height: 20%;
-  position: absolute;
-  padding-top: 0;
-  background-image: url("./../public/graphics/graphics-header.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  z-index: 2;
-}
-
-.cart--section {
-  background-color: rgba(255, 255, 255, 0.921);
-  height: 85%;
-  position: absolute;
-  width: 90vw;
-  top: 80px;
-  left: 5%;
-  border-radius: 3px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.cartOpen {
-  z-index: 3;
-  display: block;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  background-color: #121313d3;
-  height: 100vh;
-  min-width: 30px;
-}
-.cartClosed {
-  display: none;
-}
-
-.open {
-  display: block;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  background-color: #282c34;
-  height: 100vh;
-  min-width: 30px;
-  z-index: 3;
-}
-.closed {
-  display: none;
-}
-
-.nav {
-  z-index: 2;
-}
-
-.navIcon {
-  z-index: 3;
-}
-
-.navCon {
-  padding: 10px;
-}
-.openBurger {
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 50%;
-  justify-items: center;
-  width: 60%;
-  height: 50%;
-  margin: 10px;
-  background-image: url("./../public/graphics/close.svg");
-  position: absolute;
-}
-.closedBurger {
-  background-image: url("./../public/graphics/navicon.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 60%;
-  height: 60%;
-  margin: 10px;
-  position: absolute;
-}
-
-.navIcon img {
-  position: absolute;
-  top: 30%;
-  left: 25%;
-}
-.navIcon {
-  position: relative;
-  top: 50%;
-  left: 5%;
-  background-color: rgb(255, 255, 255);
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  display: inline-table;
-}
-
-.nav-con {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-
-/* SHOPINGCART  */
-
-.total--info {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  grid-template-rows: 1fr;
-  width: 100%;
-  gap: 0.5px;
-  margin-right: 10px;
-  flex: 1;
-  max-width: 90%;
-  margin-right: auto;
-  margin-left: auto;
-}
-/*  */
-.item--total {
-  margin-bottom: 0px;
-  text-align: left;
-  flex: 1;
-  font-size: 2em;
-}
-.item--dots {
-  border-bottom: dotted 3px grey;
-  flex: 1;
-}
-.item--sum {
-  align-self: flex-end;
-  margin-bottom: 0px;
-}
-
-.item--ink {
-  text-align: left;
-  padding-left: 20px;
-  font-size: 16px;
-}
-
-/* button */
-.takemyMoney {
-  background-color: rgb(0, 0, 0);
-  color: white;
-  border-radius: 30px;
-  padding: 20px 45px;
-  font-size: 1.5em;
-  bottom: 30px;
-  border: none;
-}
-
-body {
-  background-color: #f3e4e1;
-  color: black;
-}
-
-/* FONT WE ARE USING! */
-/* font-family: 'PT Serif', serif;
-font-family: 'Work Sans', sans-serif; */
-
-.App {
-  text-align: center;
-  font-family: "PT Serif", serif;
-  font-size: 18px;
-}
-.text-small {
-  font-family: "Work Sans", sans-serif;
-  font-size: 14px;
-}
-
-/* COFFEE MENU */
-.Menu--section {
-  max-width: 100%;
-  min-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* används detta */
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.landing-body {
-  background-color: rgb(10, 122, 47);
-}
-
-.status-body {
-  background-color: rgb(248, 69, 69);
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/* About */
-
-.container img {
-  width: 100%;
-}
-
-.paragraphs {
-  padding-left: 25px;
-  padding-right: 25px;
-  text-align: left;
-}
-
-.brodtxt {
-  font-weight: bold;
-}
