--- a/airbean/src/views/stylesheets/NavBar.css
+++ b/airbean/src/views/stylesheets/NavBar.css
@@ -9,25 +9,26 @@
     z-index: 3;
   }
   .openBurger {
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat;
     background-size: cover;
     width: 50%;
     justify-items: center;
     width: 40px;
-    height: 40px;
-    margin: 10px;
-    background-image: url("../../assets/graphics/close.svg");
+    height: 40px; */
+
+    /* background-image: url("../../assets/graphics/close.svg"); */
     position: absolute;
-    z-index: 5;     
+    z-index: 5;    
+    background-color: rgb(255 255 255 / 78%); 
     
   }
   .closedBurger {
-    background-image: url("../../assets/graphics/navicon.svg");
+    /* background-image: url("../../assets/graphics/navicon.svg"); */
     background-repeat: no-repeat;
     background-size: cover;
     width: 20px;
     height: 20px;
-    margin: 10px;
+    margin: 15px;
     position: absolute;
   }
   .cart {
@@ -82,11 +83,18 @@
     height: 100vh;
     min-width: 30px;
     z-index: 4;
+    margin-top: -90px;
   }
   .closed {
     display: none;
   }
-  
+  #iconWrapper > .openBurger 
+  {
+       height:50px;
+       width: 50px;
+       border-radius: 50%;
+       background-color:white;
+  }
   .cartAmount--section {
     position: absolute;
     top: -30%;
@@ -133,3 +141,15 @@
         font-size: 2em;
         
       }
+
+    .navIcon{
+      width: 50px;
+      height: 50px;
+      background-color: rgb(255 255 255 / 78%);
+      border-radius: 50%;
+      margin: 20px;
+  }
+    #navImg{
+      height: 24px;
+      width: 24px;
+    }
