--- a/airbean/src/views/stylesheets/Landing.css
+++ b/airbean/src/views/stylesheets/Landing.css
@@ -1,20 +1,20 @@
-#landingContainer{
+.landingContainer{
     position: absolute;
     background-color:#38846D ;
     height: 100%;
     width: 100%;
 }
-#leftLanding {
+.leftLanding {
     left: -32px;
     top: -156px;
     position: relative; 
  }
-#rightLanding {
+.rightLanding {
     position: relative;
     left: 32px;
     top: -153px;
   }
-  #mainLanding {
+  .mainLanding {
     position: relative;
     top: 250px;
   }
